--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </script>
   </head>
   <body>
-    <h1>main menu</h1>
+    <h1>main mHAHHAHAHAHAHAHHAH</h1>
         <div class=on>
             <img src="on.jpg" >
         </div>
